fix swiper max-height to equal vw on mobile devices

--- a/wp-content/themes/together-were-more/src/styles/components/single/swiper.scss
+++ b/wp-content/themes/together-were-more/src/styles/components/single/swiper.scss
@@ -2,6 +2,7 @@
 
 .swiper {
 	height: 500px;
+	max-height: 100vw;
 
 	.swiper-slide {
 		aspect-ratio: 1;
